# dogstar-mylab-cotracts

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.stellar/network/: testnet.toml
contracts/nft/: Cargo.toml
contracts/nft/src/: admin.rs  allowance.rs  balance.rs  contract.rs  error.rs  event.rs  lib.rs  metadata.rs  nft_info.rs  storage_types.rs  test.rs  token_interaction.rs  user_info.rs
contracts/nft/src/actions/: burn.rs  deck.rs  fight.rs  lending.rs  mod.rs  stake.rs
contracts/nft/src/pot/: management.rs  mod.rs  reward.rs
contracts/nft/test_snapshots/test/: initialize_already_initialized.1.json  test.1.json  test_add_power.1.json  test_burn.1.json  test_burn.2.json  test_currency_price.1.json  test_deck.1.json  test_fight.1.json  test_initialize_already_initialized.1.json  test_lending.1.json  test_lock.1.json  test_mint.1.json  test_mint_existing_token.1.json  test_mint_low_user_level.1.json  test_nft_contract.1.json  test_nft_lock_and_level.1.json  test_set_admin.1.json  test_stake.1.json  test_transfer_from_insufficient_allowance.1.json  test_transfer_from_not_owner.1.json  test_transfer_terry.1.json
contracts/sft/: Cargo.toml
contracts/sft/src/: allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/sft/test_snapshots/test/: test.1.json  test_balance_of_batch.1.json  test_batch_burn.1.json  test_batch_mint.1.json  test_batch_transfer.1.json  test_burn.1.json  test_transfer.1.json
contracts/token/: Cargo.toml
contracts/token/src/: admin.rs  contract.rs  storage_types.rs  test.rs
(+6 files in other folders)
