[package]
name = "soroban-nft-contract"
description = "Soroban standard nft contract"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "23.0.3" }
log = "0.4"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
env_logger = "0.11"

#[patch.crates-io]
# derive_arbitrary = "=1.3.1"