[package]
name = "soroban-sft-contract"
description = "Soroban sft contract"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
